[package]
name = "textparse"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
textparse_derive = { version = "0.1", path = "textparse_derive/" }

[dev-dependencies]
anyhow = "1"

[workspace]
members = ["textparse_derive"]
