[package]
name = "textparse"
version = "0.0.2"
edition = "2021"
authors = ["Takeru Ohta <phjgt308@gmail.com>"]
license = "MIT OR Apache-2.0"
description = "A library to declaratively implement parsers that are based on Packrat Parsing"
homepage = "https://github.com/sile/textparse"
repository = "https://github.com/sile/textparse"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
textparse_derive = { version = "0.0.1", path = "textparse_derive/" }

[dev-dependencies]
anyhow = "1"

[workspace]
members = ["textparse_derive"]
