[package]
name = "textparse_derive"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
proc-macro-crate = "1"
proc-macro2 = "1"
quote = "1"
syn = { version = "1", features = ["parsing"] }
