[package]
name = "textparse_derive"
version = "0.0.1"
edition = "2021"
authors = ["Takeru Ohta <phjgt308@gmail.com>"]
license = "MIT OR Apache-2.0"
description = "Derive macros for textparse crate"
homepage = "https://github.com/sile/textparse"
repository = "https://github.com/sile/textparse"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
proc-macro-crate = "1"
proc-macro2 = "1"
quote = "1"
syn = { version = "1", features = ["parsing"] }
